log
Fri 29 Mar 2024 10:26:53 PM UTC: 
Fri 29 Mar 2024 11:17:53 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
2e85835
Fri 29 Mar 2024 11:19:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
40489ff
Fri 29 Mar 2024 11:22:48 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:39:8: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   39 |   if (!lista->head) return NULL;
      |        ^~~~~
      |        list
list.c:39:8: note: each undeclared identifier is reported only once for each function it appears in
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
254e72a
Fri 29 Mar 2024 11:23:19 PM UTC: 
 list.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 15/70
6dadf17
Fri 29 Mar 2024 11:28:32 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
279b1b2
Fri 29 Mar 2024 11:30:08 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3193a04
Fri 29 Mar 2024 11:32:32 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f971050
Fri 29 Mar 2024 11:37:37 PM UTC: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|2
total_score: 45/70
68e5523
Fri 29 Mar 2024 11:41:18 PM UTC: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  10|2
total_score: 45/70
ebf73f9
Fri 29 Mar 2024 11:41:50 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  10|2
total_score: 45/70
1f640d9
